dev-9 work on bugs: - mobile menu now on JS - all menu styles have been rewritten to fit the js working conditions - improved readability - increased adaptability

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,18 +1,15 @@
-/*
-
-    footer
-
-*/
 .footer {
     background-color: black;
     color: white;
     padding: 0 20px;
 }
+
 /*
 
-    footer-top
+    FOOTER-TOP
 
 */
+
 .footer-top {
     max-width: var(--max-width);
     margin: auto;
@@ -20,47 +17,58 @@
     justify-content: space-between;
     padding: 40px 0;
 }
+
 .footer-top__main-logo {
     width: 20%;
 }
+
 .footer-logo {
     width: 148px;
 }
+
 .footer-links {
     display: inline-flex;
     justify-content: space-between;
     width: 80%;
 }
+
 .social-links > ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 .social-links .footer-links__col-item {
     padding-right: 20px;
 }
+
 .social-links__link {
     display: inline-block;
     height: 24px;
 }
-.social-links__link > * {
+
+.social-links__link > img {
     transition: var(--default-transition-for-animation);
 }
-.social-links__link:hover > * {
+
+.social-links__link:hover > img {
     filter: brightness(3) contrast(3);
     transition: var(--default-transition-for-animation);
 }
+
 .footer-links__col {
     width: 20%;
     box-sizing: border-box;
     padding: 0 20px;
 }
+
 .footer-links__col__header {
     line-height: 20px;
     font-size: 16px;
     font-family: Calibre-Semibold, serif;
     margin-bottom: 8px;
 }
+
 .footer-links__col-item {
     font-size: 16px;
     line-height: 24px;
@@ -69,20 +77,24 @@
     color: #8D8D8D;
     transition: color .4s ease;
 }
+
 .footer-links__col-item:hover {
     color: white;
     transition: color .6s ease;
 }
+
 /*
 
-    footer-top
-    end
+    FOOTER-TOP
+    END
 */
+
 /*
 
-    footer-bottom
+    FOOTER-BOTTOM
 
 */
+
 .footer-bottom {
     max-width: var(--max-width);
     margin: auto;
@@ -91,6 +103,7 @@
     align-items: center;
     padding: 16px 0;
 }
+
 .footer-copyright {
     color: #C2C2C2;
     line-height: 16px;
@@ -98,36 +111,43 @@
     font-family: Calibre-Regular, serif;
     margin-top: 3px;
 }
+
 /*
 
-    footer-bottom
-    end
+    FOOTER-BOTTOM
+    END
+*/
+
+/*
+
+    @MEDIA
+
 */
 
 @media only screen and (max-device-width : 767px) {
 
-    .footer-top {
-        height: var(--mobile-footer-top-height);
-    }
     .footer-top__main-logo {
         margin: 0;
     }
+
     .footer-links__col {
         width: 46%;
         margin-top: 35px;
     }
+
     .footer-bottom {
         padding: 0 15px;
     }
 
 }
 
-@media only screen and (max-device-width : 1240px) {
+@media only screen and (max-device-width : 1199px) {
 
     .footer-top {
         display: flex;
         flex-direction: column;
     }
+
     .footer-links {
         width: 100%;
         display: inline-flex;
@@ -136,35 +156,32 @@
         flex-wrap: wrap;
         flex-grow: 1;
     }
+
     .footer-links__col {
         height: auto;
         margin-right: 0;
     }
 }
 
-@media only screen and (min-device-width : 767px) and (max-device-width : 1240px) {
+@media only screen and (min-device-width : 767px) and (max-device-width : 1199px) {
 
-    .footer-top {
-        height: var(--tablet-footer-top-height);
-    }
     .footer-links {
         margin-top: 50px;
     }
+
     .footer-links__col {
         width: 25%;
+        margin-bottom: 20px;
     }
+
     .footer-top__main-logo {
         margin-left: 10px;
     }
 }
 
 @media only screen and (max-device-width : 350px) {
+
     .footer-links__col {
         width: 100%;
     }
 }
-/*
-
-    footer
-    end
-*/
