--- a/styles/replace-initial-styles.css
+++ b/styles/replace-initial-styles.css
@@ -1,11 +1,7 @@
-/*
-
-    replace initial styles
-
-*/
 html, body {
     min-height: 100vh;
 }
+
 body {
     margin: 0;
 
@@ -13,23 +9,37 @@ body {
     justify-content: space-between;
     flex-direction: column;
 }
+
 a {
     text-decoration: none;
     color: inherit;
 }
+
 ul {
     margin: 0;
     padding: 0;
 }
+
 li {
     list-style: none;
 }
+
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+button {
+    background-color: white;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    padding: 0;
+}
+
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -38,8 +48,3 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     font-size: 16px;
 }
-/*
-
-    replace initial styles
-    end
-*/
